fix scrolling on docs pages
long pages were getting truncated, now we scroll

--- a/script_runner/frontend/src/App.css
+++ b/script_runner/frontend/src/App.css
@@ -230,6 +230,8 @@ li.home-search-result:hover {
 
 .document-markdown {
   padding: 10px;
+  height: calc(100vh - 70px);
+  overflow-y: scroll;
 }
 
 .function-header {
